--- a/src/Buy.html
+++ b/src/Buy.html
@@ -18,7 +18,7 @@
       <div>
         <ul id="navbar">
           <li><a href="Index.html">Home</a></li>
-          <li><a class="active" href="Buy.html">Buy</a></li>
+          <li><a class="active" href="buy.html">Buy</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
